# vector-deploy-webapp-creator-69edc591

./: Dockerfile  Makefile  README.md  claude.json  claude.json.backup.1770237241817  claude.json.backup.1770239487667  claude.json.backup.1770239560661  claude.json.backup.1770239797909  claude.json.backup.1770243317247  manage.py  pyproject.toml  render.yaml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/tests/: helpers.py  test_user_views.py
config/: settings.py  urls.py  wsgi.py
config/uv/: uv-receipt.json
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/common/: NeutralityBadge.tsx
frontend/src/components/recommendations/: ComparisonTable.tsx  RecommendationCard.tsx  RecommendationCardSkeleton.tsx  ScoreBreakdown.tsx
frontend/src/components/search/: PreferenceSelector.tsx  SearchBar.tsx  VariantSelector.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  DialogProvider.tsx  EmptyState.tsx  Input.tsx  Loading.tsx  Select.tsx  Spinner.tsx  Table.tsx  (+3 more)
frontend/src/lib/: utils.ts
frontend/src/pages/: SearchResultsPage.tsx
frontend/src/services/: api.ts  mockData.ts  productsApi.ts
frontend/src/styles/: tokens.css
frontend/src/types/: product.ts
frontend/tests/e2e/: app.spec.ts  recommendations.spec.ts  search.spec.ts
shared/: authentication.py  models.py
shared/tests/: helpers.py
templates/: project.md  questioning.md
